<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019 Telekom Deutschland AG
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fingerprint_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/sc_button_cancel"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sc_plugin_dimen_auth_general_padding"
        android:text="@string/sc_plugin_string_cancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sc_image_fingerprint_icon" />


    <Button
        android:id="@+id/sc_button_auth"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sc_plugin_string_use_pin"
        app:layout_constraintBottom_toBottomOf="@id/sc_button_cancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/sc_button_cancel"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/sc_image_fingerprint_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sc_plugin_dimen_auth_large_padding"
        android:contentDescription="@string/sc_plugin_string_description_fingerprint_icon"
        android:src="@drawable/sc_ic_dialog_fingerprint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sc_text_fingerprint_description" />

    <TextView
        android:id="@+id/sc_text_fingerprint_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/sc_plugin_string_fingerprint_description"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sc_text_fingerprint_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sc_plugin_dimen_auth_general_padding"
        android:text="@string/sc_plugin_string_fingerprint_hint"
        android:textColor="@color/sc_fingerprint_hint"
        app:layout_constraintBottom_toBottomOf="@+id/sc_image_fingerprint_icon"
        app:layout_constraintLeft_toRightOf="@id/sc_image_fingerprint_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sc_image_fingerprint_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>
