<!--
  ~ Copyright (c) 2019 Telekom Deutschland AG
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="sc_plugin_string_fingerprint_description">Confirm fingerprint to continue</string>
    <string name="sc_plugin_string_description_fingerprint_icon">Fingerprint icon</string>
    <string name="sc_plugin_string_fingerprint_hint">Touch sensor</string>
    <string name="sc_plugin_string_cancel">Cancel</string>
    <string name="sc_plugin_string_use_pin">Use pin</string>
    <string name="sc_plugin_string_fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="sc_plugin_string_fingerprint_success">Fingerprint recognized</string>
    <string name="sc_plugin_string_fingerprint_sign_in">Sign in</string>

    <string name="sc_credentials_title">PIN Verification</string>
    <string name="sc_credentials_description">Please enter device PIN</string>
</resources>
