<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019 Telekom Deutschland AG
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sc_dialog_layout_fingerprint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/sc_plugin_dimen_auth_large_padding"
    android:paddingTop="@dimen/sc_plugin_dimen_auth_general_padding"
    android:paddingEnd="@dimen/sc_plugin_dimen_auth_large_padding"
    android:paddingBottom="@dimen/sc_plugin_dimen_auth_general_padding">

    <de.telekom.smartcredentials.authorization.fingerprint.FingerprintLayout
        android:id="@+id/sc_layout_fingerprint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</FrameLayout>
